2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/player.c: (network_player_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/simple-server.c: (network_simple_server_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/client.c: (network_client_init),
	(network_client_class_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/game.c: (network_game_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/net/message-handler.c: (network_message_handler_init): use
	G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-2-player-manager.c: (game_2_player_manager_init): use
	G_DEFINE_TYPE_WITH_CODE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-sound.c: (mb_game_sound_init): use G_DEFINE_TYPE

2008-02-09  Sven Herzberg  <sven@imendio.com>

	* src/ui/game.c: (game_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-network-player.c: (game_network_player_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-2-player.c: (game_2_player_init),
	(game_2_player_class_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-network-player-manager.c:
	(game_network_player_manager_init),
	(game_network_player_manager_class_init): use G_DEFINE_TYPE_WITH_CODE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-network-server.c: (ui_network_server_init): use
	G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player-manager.c: (game_1_player_manager_init): use
	G_DEFINE_TYPE_WITH_CODE

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/game-1-player.c: (game_1_player_init): use G_DEFINE_TYPE

2008-02-08  Sven Herzberg  <sven@imendio.com>
