@@ -1,5 +1,10 @@
 2008-02-09  Sven Herzberg  <sven@imendio.com>
 
+	* src/net/game-manager.c: (network_game_manager_init): use
+	G_DEFINE_TYPE
+
+2008-02-09  Sven Herzberg  <sven@imendio.com>
+
 	* src/net/player.c: (network_player_init): use G_DEFINE_TYPE
 
 2008-02-09  Sven Herzberg  <sven@imendio.com>
